--- a/ln-bridge/Cargo.toml
+++ b/ln-bridge/Cargo.toml
@@ -4,20 +4,21 @@ version = "2.0.0"
 edition = "2018"
 
 [dependencies]
-primitives = { package = "substrate-primitives", path = "../primitives" }
+client-api = { package = "sc-client-api", path = "../api" }
+sp-core = { path = "../../primitives/core" }
 ln-primitives = { path = "./primitives" }
-sr-primitives = { path = "../../core/sr-primitives" }
-client = { package = "substrate-client", path = "../../core/client" }
-# substrate-service = { path = "../../core/service" }
+sp-runtime = { path = "../../primitives/runtime" }
+client = { package = "sc-client", path = "../" }
 ln-manager = { git = "https://github.com/YaaMe/rust-lightning-bitcoinrpc.git", branch = "knarfytrebil" }
-runtime_io = { package = "sr-io", path = "../sr-io" }
+# runtime_io = { package = "sr-io", path = "../sr-io" }
 futures01 = "0.1.17"
-futures = { package = "futures-preview", version = "0.3.0-alpha.19" }
-tokio = { version = "=0.2.0-alpha.6" }
+futures = { package = "futures-preview", version = "0.3.0-alpha.19", features = ["compat"] }
+futures-util = { version = "0.3.1" }
+tokio = { version = "0.2.0-alpha.6" }
 exit-future = "0.1"
 log = { version = "0.4", optional = true }
 codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
-inherents = { package = "substrate-inherents", path = "../../core/inherents" }
+inherents = { package = "sp-inherents", path = "../../primitives/inherents" }
 hex = "0.4.0"
 
 [features]
