--- a/lightning/Cargo.toml
+++ b/lightning/Cargo.toml
@@ -1,27 +1,29 @@
 [package]
-name = "srml-lightning"
+name = "lightning"
 version = "0.1.0"
 edition = "2018"
 
 [dependencies]
 serde = { version = "1.0.101", optional = true }
 codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
-rstd = { package = "sr-std", path = "../../core/sr-std", default-features = false }
-sr-primitives = { path = "../../core/sr-primitives", default-features = false }
-ln-primitives = { path = "../../core/ln-bridge/primitives", default-features = false }
-inherents = { package = "substrate-inherents", path = "../../core/inherents", default-features = false }
-support = { package = "srml-support", path = "../support", default-features = false }
-system = { package = "srml-system", path = "../system", default-features = false }
-runtime_io = { package = "sr-io", path = "../../core/sr-io", default-features = false }
-primitives = { package="substrate-primitives", path = "../../core/primitives", default-features = false }
-offchain-primitives = { package = "substrate-offchain-primitives", path = "../../core/offchain/primitives", default-features = false }
+rstd = { package = "sp-std", path = "../../primitives/std", default-features = false }
+sp-runtime = { path = "../../primitives/runtime", default-features = false }
+ln-primitives = { path = "../../client/ln-bridge/primitives", default-features = false }
+inherents = { package = "sp-inherents", path = "../../primitives/inherents", default-features = false  }
+support = { package = "frame-support", path = "../support", default-features = false }
+system = { package = "frame-system", path = "../system", default-features = false }
+
+# runtime_io = { package = "sr-io", path = "../../core/sr-io", default-features = false }
+sp-io = { path = "../../primitives/io" }
+sp-core = { path = "../../primitives/core" }
+pallet-offences = { path = "../offences", default-features = false }
 
 [features]
 default = ["std"]
 std = [
   "codec/std",
   "rstd/std",
-  "sr-primitives/std",
+  "sp-runtime/std",
   "ln-primitives/std",
   "inherents/std",
   "support/std",
