--- a/ln-bridge/primitives/Cargo.toml
+++ b/ln-bridge/primitives/Cargo.toml
@@ -6,15 +6,14 @@ edition = "2018"
 [dependencies]
 codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
-client = { package = "substrate-client", path = "../../../core/client", default-features = false }
-sr-primitives = { package = "sr-primitives", path = "../../../core/sr-primitives", default-features = false }
-rstd = { package = "sr-std", path = "../../sr-std", default-features = false }
+sp-api = { path = "../../../primitives/api", default-features = false }
+sp-runtime = { path = "../../../primitives/runtime", default-features = false }
+rstd = { package = "sp-std", path = "../../../primitives/std", default-features = false }
 [features]
 default = ["std"]
 std = [
-  "client/std",
   "codec/std",
   "rstd/std",
   "serde",
-  "sr-primitives/std"
+  "sp-runtime/std"
 ]
